--- a/mobile.css
+++ b/mobile.css
@@ -28,7 +28,7 @@
     padding: 0px;
   }
   .button {
-    padding: 6px 10px;
+    padding: 6px 10px 4px 10px;
     font-size: 10px;
   }
   .flex-social {
