--- a/mobile.css
+++ b/mobile.css
@@ -1,10 +1,23 @@
+/* Zoom x1.25 */
+@media(max-width: 1300px) and (min-width: 1080px)  {
+  .logo {
+    width: 800px;
+  }
+}
 
 /* Ipad, surface-duo - horizontal +*/
-@media(max-width: 1115px) and (max-height: 768px){
+@media(max-width: 1115px) and (max-height: 1340px){
   .logo {
     width: 700px;
   }
 }
+/* Zoom x150 */
+@media(max-width: 900px) and (min-width: 770px) {
+  .logo {
+    width: 500px;
+  }
+}
+
 /* Horizontal Mobile + surfaceDuo - horizontal - unfold*/
 @media(max-width: 830px) and (max-height: 540px) {
   h2 {
