--- a/mobile.css
+++ b/mobile.css
@@ -1,7 +1,7 @@
 /* Zoom x1.25 */
-@media(max-width: 1300px) and (min-width: 1080px)  {
+@media screen and (max-width: 1600px) {
   .logo {
-    width: 800px;
+    width: 700px;
   }
 }
 
@@ -12,7 +12,7 @@
   }
 }
 /* Zoom x150 */
-@media(max-width: 900px) and (min-width: 770px) {
+@media screen and (max-width: 1300px)  {
   .logo {
     width: 500px;
   }
