--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@ p {
 /* Utility Classes */
 .container {
   text-align: center;
-  max-width: 1280px;
+  max-width: 960px;
   margin: auto;
-  padding: 0px 50px;
+  padding: 0px 30px;
 }
 .wrap {
   overflow: hidden;
@@ -60,13 +60,15 @@ p {
   max-height: 100%;
   height: 100vh;
   
+  
 }
 
 /* Flex-box */
 .flex-contact {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
+  align-self:stretch;
   align-items: center;
   margin-top: 30px; 
 }
@@ -74,10 +76,20 @@ p {
   padding: 0 65px;
 }
 .flex-contact .left {
-text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  text-align: left;
+  
 }
 .flex-contact .right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
   text-align: right;
+  
 }
 
 /* Flex-middle */
